Added readme to the root

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 <div class="panel">
 	<div class="content">
 		<h1>Beards & Mountains</h1>
-		<p>Chronicles of a beard and the mountains</p>
+		<p>Tier 2 Messaging Lorem Ipsum</p>
 	</div>
 </div>
 <div class="container">
